# personal-ai-voice-assistant

./: .env.example  .gitignore  README.md  main.py  makefile  pyproject.toml  settings.py
src/dataset/: check_format.py  clean.py  create_dataset.py  execution_checker.py  prompts.py  tools_description.py  utils.py
src/dataset/generation/: generate_multi_tool_points.py  generate_negative_points.py  generate_single_tool_points.py  paraphrase.py
src/functions/: functions.py
src/utils/: logging_config.py
tests/: conftest.py  test_functions.py
