[project]
name = "personal-ai-voice-assistant"
version = "0.1.0"
description = "A private, locally hosted AI-powered voice assistant for your mobile device."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "huggingface-hub>=0.35.0",
    "litellm<1.60",
    "psutil",
    "pyaudio>=0.2.14",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
